--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -78,3 +78,26 @@
 .modal-active {
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+@media only screen and (min-width: 1024px) {
+
+  .modal {
+
+    .about {
+      position: relative;
+
+      #modal-exit {
+        position: absolute;
+        left: 45em;
+
+      }
+
+      .rewards-container {
+
+        .reward {
+          justify-content: flex-start;
+        }
+      }
+    }
+  }
+}
