--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -1,5 +1,19 @@
 @media only screen and (min-width: 768px) {
 
+  header {
+
+    .navbar {
+
+      &.show {
+        position: absolute;
+        top: 10em;
+        left: 10em;
+        text-align: center;
+        width: 60%;
+      }
+    }
+  }
+
 
   .main-container {
 
