--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,12 +27,14 @@ header {
   background-size: cover;
   height: 50vh;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
   padding: 1em 1em 0 1em;
   position: relative;
   z-index: 1;
 
   .burger {
+    cursor: pointer;
 
     div {
       background-color: white;
@@ -45,6 +47,36 @@ header {
 
   .navbar {
     display: none;
+
+    &.show {
+      position: relative;
+      height: 100vh;
+      top: 1em;
+      bottom: 0;
+      z-index: 9;
+      width: 100%;
+      display: flex;
+      flex-flow: column wrap;
+      border-radius: 20px;
+      // background-color: rgba(0, 0, 0, 0.5);
+    }
+
+
+    ul {
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+      background: white;
+      border-radius: 15px;
+
+      li {
+        list-style-type: none;
+        border-top: 1px solid grey;
+        padding: 1.5em 1em;
+        width: 100%;
+      }
+    }
   }
 }
 
@@ -275,70 +307,6 @@ header {
         border: 1px solid $dark-gray;
       }
     }
-
-    ///// Modal Styles /////
-
-    // .reward {
-    //   position: relative;
-
-    //   input {
-    //     position: absolute;
-    //     opacity: 0;
-    //     cursor: pointer;
-    //     height: 0;
-    //     width: 0;
-    //   }
-
-    //   /* Custom radio button */
-    //   .checkmark {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     height: 25px;
-    //     width: 25px;
-    //     background-color: #eee;
-    //     border-radius: 50%;
-    //     cursor: pointer;
-    //   }
-
-    //   /* On mouse-over, add background color */
-
-    //   &:hover input~.checkmark {
-    //     background: #ccc;
-    //   }
-
-    //   /* When radio button is checked, add different background */
-    //   & input:checked~.checkmark {
-    //     background-color: #2196F3;
-    //   }
-
-    //   /* Create indicator (dot/circle - hidden when not checked) */
-
-    //   .checkmark:after {
-    //     content: "";
-    //     position: absolute;
-    //     display: none;
-    //   }
-
-    //   /* Show the indicator when checked */
-    //   & input:checked~.checkmark:after {
-    //     display: block;
-    //   }
-
-    //   /* Style the indicator (dot/circle) */
-    //   & .checkmark:after {
-    //     top: 9px;
-    //     left: 9px;
-    //     width: 8px;
-    //     height: 8px;
-    //     border-radius: 50%;
-    //     background: white;
-    //   }
-
-    // }
-
-
-
   }
 }
 
